<?xml version="1.0"?>
<package format="2">
  <name>ars548_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fernando@todo.todo">fernando</maintainer>
  <license>TODO: License declaration</license>

  <!-- 构建工具依赖项 -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ars548_messages</depend>
  <depend>tf2_geometry_msgs</depend>
  

  
  <!-- 测试依赖项 -->
  <test_depend>roslint</test_depend>

  <!-- 导出信息 -->
  <export>
  </export>
</package>
